# SpotCC

./: CMakeLists.txt  README.md
conf/: config.json  preempt_duration.ipynb
conf/traces/: analysis.ipynb  multi_region.ipynb
conf/traces/availability/1-node/aws-02-15-2023/extracted/: zone_1.json  zone_2.json  zone_3.json  zone_6.json  zone_7.json
conf/traces/preemption/1-node/aws-04-22-2023/: us-east-1f_v100_1.json
conf/traces/preemption/4-node/aws-08-03-2023/extracted/: zone_7.json
conf/traces/synthetic/2-node/: zone_1.json
conf/traces/synthetic/4-node/: zone_1.json  zone_2.json  zone_3.json  zone_4.json  zone_5.json  zone_6.json  zone_8.json
conf/workloads/: MAF.csv
protos/: build_proto.sh  elasticcdc.proto
script/: analyze.py  run.sh  stop.sh  update.sh
src/: CMakeLists.txt
src/backend/: CMakeLists.txt  backend.cc  backend.hh  backend_server.cc  image_classify.cc  image_classify.hh  monitor.cc  query.hh  worker.cc  worker.hh
src/common/: cache.cc  cache.hh  concurrency_queue.hh  concurrency_set.hh  conf.cc  conf.hh  image.cc  image.hh  thread_pool.hh
src/example/: image_client.cc  image_frontend.cc  triton-client-example.cpp
src/frontend/: CMakeLists.txt  Worker.cc  Worker.hh  arimaAlg.hh  decoder.cc  decoder.hh  encoder.cc  encoder.hh  filter.hh  frontend.cc  frontend.hh  monitor.hh  monitor2parts.hh  preprocessor.cc  preprocessor.hh  query.hh  zone.hh  zone2parts.hh
src/inc/: inc.hh
src/protocol/: elasticcdc.grpc.pb.cc  elasticcdc.grpc.pb.h  elasticcdc.pb.cc  elasticcdc.pb.h
src/triton_library/: CMakeLists.txt  grpc_client.cc  http_client.cc
src/util/: queue.hh
src/util/ARIMA/: ARIMA.cc  ARIMA.hh  example.cc
